[package]
name = "yew-recaptcha-v3"
version = "0.1.3"
edition = "2021"
repository = "git@github.com:security-union/yew-recaptcha.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
gloo-console = "0.2.1"
gloo-utils = "0.1.5"
anyhow = "1.0.61"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.32"
serde-wasm-bindgen = "0.4.5"
js-sys = "0.3.59"
serde = "1.0.143"
[dependencies.web-sys]
version = "0.3.58"
features = [
    "HtmlCanvasElement",
    "Element"
]