[package]
name = "recaptcha-basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
wasm-bindgen = { version="0.2.82", features = ["serde-serialize"] }
yew-recaptcha-v3 = { path = "../../"}
gloo-console = "0.2.1"